background changes; fixed collapsing sections on Get Involved page.

--- a/src/App.css
+++ b/src/App.css
@@ -2,9 +2,6 @@ html {
   scroll-behavior: auto;
 }
 
-.snap-y {scroll-snap-type: y mandatory;} 
-.snap-start {scroll-snap-align: start;}
-
 #root {
   max-width: 1280px;
   margin: 0 auto;
